[gd_scene load_steps=4 format=3 uid="uid://cadj7q4xw22hu"]

[ext_resource type="Script" path="res://Scripts/finish_scene_script.gd" id="1_lpysw"]
[ext_resource type="AudioStream" uid="uid://crcl4yojsja4e" path="res://Sounds/fail_sound.mp3" id="2_slihd"]
[ext_resource type="Texture2D" uid="uid://bnndxcbcpjncj" path="res://Objects/Ghost/hallowenGhost.jpg" id="3_k7s5u"]

[node name="finish_scene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lpysw")

[node name="FailSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_slihd")
volume_db = -4.71

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_k7s5u")
expand_mode = 2

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -22.5
offset_right = -35.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.984314, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Puanınız :"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Point" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 96.0
offset_top = -22.5
offset_right = 184.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.984314, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Play_Again" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -289.0
offset_top = -132.0
offset_right = -129.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.27572, 1.30782)
text = "Tekrar Oyna"

[node name="Quit" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 172.0
offset_top = -134.0
offset_right = 332.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.27572, 1.30782)
text = "Çıkış
"

[connection signal="pressed" from="TextureRect/Play_Again" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="TextureRect/Quit" to="." method="_on_quit_pressed"]
